<resources>
    <string name="app_name">Vamo_Dale_Sporting_Events</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email_email_com">\u0020\u0020\email@email.com</string>
    <string name="e_mail">e-mail</string>
    <string name="password">password</string>
    <string name="password_example">\u0020\u0020\********</string>
    <string name="enter">enter</string>
    <string name="dont_have_an_account">Don\'t have an account?<br><b>Register here</b></br></string>
</resources>